Add ability to edit audio tags

--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -271,5 +271,6 @@
         <file>static/img/playlist_download.png</file>
         <file>static/img/post_actions.png</file>
         <file>static/img/audio_wav_logo.png</file>
+        <file>static/img/audio_edit_tags.png</file>
     </qresource>
 </RCC>
