Add tooltip tag/markup

--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -159,6 +159,11 @@ span.spoiler:hover a {
     color: #DD0000;
 }
 
+span.tooltip {
+    color: #E08060;
+    cursor: help;
+}
+
 .postLimitReached {
     color: red;
 }
