--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -63,6 +63,11 @@
             <br />
             [spoiler]<span class="spoiler"><%= spoiler %></span>[/spoiler]
             <br /><br />
+            <%= tooltipText %>???"<%= tooltip %>" --&gt;
+            <span class="tooltip" title="<%= tooltip %>"><%= tooltipText %></span>
+            <br /><br />
+            [tooltip value="<%= tooltip %>"]<span class="tooltip" title="<%= tooltip %>"><%= tooltipText %></span>[/tooltip]
+            <br /><br />
             %%_**<span class="spoiler"><i><b><%= combinedText %></b></i></span>**_%%
             <br />
             [spoiler][i][b]<span class="spoiler"><i><b><%= combinedText %></b></i></span>[/b][/i][/spoiler]
