Use hidden input for last post number info

--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -73,6 +73,7 @@
     <body>
         <% include baseTexts() %>
         <% include boardTexts() %>
+        <input type="hidden" id="lastPostNumber" value="<%= lastPostNumber %>" />
         <% include customHeader() %>
         <% include navigationButton("bottom") %>
         <% include navigationButton("top") %>
