Get new post count for all boards by one request

--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -164,6 +164,11 @@ span.tooltip {
     cursor: help;
 }
 
+span.newPostCount {
+    color: red;
+    font-size: 75%;
+}
+
 .postLimitReached {
     color: red;
 }
