--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -170,6 +170,11 @@ span.tooltip {
     cursor: help;
 }
 
+span.newPostCount {
+    color: green;
+    font-size: 75%;
+}
+
 .postLimitReached {
     color: red;
 }
