Add error 413 description

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -105,6 +105,7 @@
 <input type="hidden" id="removeFromFavoritesText" value="<%= removeFromFavoritesText %>" />
 <input type="hidden" id="favoriteThreadsText" value="<%= favoriteThreadsText %>" />
 <input type="hidden" id="settingsDialogTitle" value="<%= settingsDialogTitle %>" />
+<input type="hidden" id="error413Text" value="<%= error413Text %>" />
 <div id="settingsDialogTemplate" class="settingsDialog" style="display: none;" >
     <table>
         <tbody>
