Show if file exists on server when it is uploaded

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -462,6 +462,7 @@
 <input type="hidden" id="addFileText" value="<%= addFileText %>" />
 <input type="hidden" id="editAudioTagsText" value="<%= editAudioTagsText %>" />
 <input type="hidden" id="addToPlaylistText" value="<%= addToPlaylistText %>" />
+<input type="hidden" id="fileExistsOnServerText" value="<%= fileExistsOnServerText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <%foreach board in availableBoards %>
         <% item %>
