--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -272,5 +272,6 @@
         <file>static/img/post_actions.png</file>
         <file>static/img/audio_wav_logo.png</file>
         <file>static/img/audio_edit_tags.png</file>
+        <file>static/img/storage.png</file>
     </qresource>
 </RCC>
