--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -273,5 +273,6 @@
         <file>static/img/audio_wav_logo.png</file>
         <file>static/img/audio_edit_tags.png</file>
         <file>static/img/storage.png</file>
+        <file>static/img/okayface.png</file>
     </qresource>
 </RCC>
