--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -106,6 +106,17 @@ hr {
     right: 20px;
 }
 
+.theSettings {
+    /*width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;*/
+}
+
+.inlineForm {
+    display: inline;
+}
+
 /*
     Ban
 */
