--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -23,37 +23,70 @@
 <% template settings() %>
 <div class="settingsBar">
     <span>
-        <%= localeLabelText %>
-        <select id="localeChangeSelect" class="select" onchange="javascript:lord.changeLocale();">
-            <% foreach locale in locales %>
-                <% item %>
-                    <% if ( locale.name == content.currentLocale.name ) %>
-                        <option value="<%= locale.name %>" selected="true">
-                    <% else %>
-                        <option value="<%= locale.name %>">
-                    <% end %>
-                        <%= locale.language %> (<%= locale.country %>)
-                    </option>
-                <% end %>
+        <form method="post" accept-charset="utf-8" action="/<%= sitePathPrefix %>action/change_locale"
+              enctype="multipart/form-data" class="inlineForm">
+            <%= localeLabelText %>
+            <% if ( content.mode.name != "ascetic" ) %>
+                <select id="localeChangeSelect" class="select" onchange="javascript:lord.changeLocale();">
+            <% else %>
+                <select id="localeChangeSelect" name="localeChangeSelect" class="select">
             <% end %>
-        </select>
+                <% foreach locale in locales %>
+                    <% item %>
+                        <% if ( locale.name == content.currentLocale.name ) %>
+                            <option value="<%= locale.name %>" selected="true">
+                        <% else %>
+                            <option value="<%= locale.name %>">
+                        <% end %>
+                            <%= locale.language %> (<%= locale.country %>)
+                        </option>
+                    <% end %>
+                <% end %>
+            </select>
+            <% if ( content.mode.name == "ascetic" ) %>
+                <input type="submit" name="submit" value="OK" class="button" />
+            <% end %>
+        </form>
     </span>
     <span>
-        <button class="button" onclick="javascript:lord.showSettings();"><%= settingsButtonText %></button>
+        <% if ( content.mode.name != "ascetic" ) %>
+            <button class="button" onclick="javascript:lord.showSettings();"><%= settingsButtonText %></button>
+        <% else %>
+            <a href="/<%= sitePathPrefix %>settings"
+               target="_blank"><button class="button"><%= settingsButtonText %></button></a>
+        <% end %>
     </span>
     <span>
-        <button class="button" onclick="javascript:lord.showFavorites();"><%= showFavoriteText %></button>
+        <% if ( content.mode.name != "ascetic" ) %>
+            <button class="button" onclick="javascript:lord.showFavorites();"><%= showFavoriteText %></button>
+        <% end %>
     </span>
     <span>
         <%= loginLabelText %>
         <% if ( content.loggedIn ) %>
-            <button class="button" onclick="javascript:lord.doLogout();"><%= loginButtonText %></button>
+            <% if ( content.mode.name != "ascetic" ) %>
+                <button class="button" onclick="javascript:lord.doLogout();"><%= loginButtonText %></button>
+            <% else %>
+                <form method="post" accept-charset="utf-8" action="/<%= sitePathPrefix %>action/logout"
+                      enctype="multipart/form-data" class="inlineForm">
+                    <input type="submit" name="submit" value="<%= loginButtonText %>" class="button" />
+                </form>
+            <% end %>
         <% else %>
-            <input id="loginInput" type="password" class="input" name="hashpass"
-                   placeholder="<%= loginPlaceholderText %>" />
-            <input id="showLoginCheckbox" type="checkbox" class="checkbox" onclick="javascript:lord.switchShowLogin();"
-                   name="showLogin" title="<%= showPasswordText %>" />
-            <button class="button" onclick="javascript:lord.doLogin();"><%= loginButtonText %></button>
+            <% if ( content.mode.name != "ascetic" ) %>
+                <input id="loginInput" type="password" class="input" name="hashpass"
+                       placeholder="<%= loginPlaceholderText %>" />
+                <input id="showLoginCheckbox" type="checkbox" onclick="javascript:lord.switchShowLogin();"
+                       name="showLogin" title="<%= showPasswordText %>" class="checkbox" />
+                <button class="button" onclick="javascript:lord.doLogin();"><%= loginButtonText %></button>
+            <% else %>
+                <form method="post" accept-charset="utf-8" action="/<%= sitePathPrefix %>action/login"
+                      enctype="multipart/form-data" class="inlineForm">
+                    <input id="loginInput" type="password" class="input" name="hashpass"
+                           placeholder="<%= loginPlaceholderText %>" />
+                    <input type="submit" name="submit" value="<%= loginButtonText %>" class="button" />
+                </form>
+            <% end %>
         <% end %>
         <% if ( !content.loginMessageWarning.empty() ) %>
             <span class="loginMessageWarning"><%= loginMessageWarning %></span>
@@ -106,9 +139,29 @@
 <input type="hidden" id="favoriteThreadsText" value="<%= favoriteThreadsText %>" />
 <input type="hidden" id="settingsDialogTitle" value="<%= settingsDialogTitle %>" />
 <input type="hidden" id="error413Text" value="<%= error413Text %>" />
-<div id="settingsDialogTemplate" class="settingsDialog" style="display: none;" >
+<div id="settingsDialogTemplate" class="settingsDialog" style="display: none;">
     <table>
         <tbody>
+            <tr>
+                <td>
+                    <%= modeLabelText %>
+                </td>
+                <td>
+                    <select name="modeChangeSelect" class="select">
+                        <% foreach m in modes %>
+                            <% item %>
+                                <% if ( m.name == content.mode.name ) %>
+                                    <option value="<%= m.name %>" selected="true">
+                                <% else %>
+                                    <option value="<%= m.name %>">
+                                <% end %>
+                                    <%= m.title %>
+                                </option>
+                            <% end %>
+                        <% end %>
+                    </select>
+                </td>
+            </tr>
             <tr>
                 <td>
                     <%= styleLabelText %>
@@ -193,9 +246,12 @@
 <link id="favicon" rel="shortcut icon" href="/<%= sitePathPrefix %>favicon.ico">
 <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <% if ( javascript ) %>
-    <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/picoModal-2.1.0.min.js"></script>
-    <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/sha1.js"></script>
-    <script type="text/javascript" src="/<%= sitePathPrefix %>js/base.js"></script>
+    <script type="text/javascript" src="/<%= sitePathPrefix %>js/api.js"></script>
+    <% if ( content.mode.name != "ascetic" ) %>
+        <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/picoModal-2.1.0.min.js"></script>
+        <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/sha1.js"></script>
+        <script type="text/javascript" src="/<%= sitePathPrefix %>js/base.js"></script>
+    <% end %>
 <% end %>
 <% end template %>
 
