--- a/src/lib/template/cg_board.tmpl
+++ b/src/lib/template/cg_board.tmpl
@@ -7,28 +7,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <% include baseHead(0) %>
-        <script type="text/javascript">
-            /*ololord global object*/
+        <% if ( content.mode.name != "ascetic" ) %>
+            <script type="text/javascript">
+                /*ololord global object*/
 
-            var lord = lord || {};
+                var lord = lord || {};
 
-            /*Functions*/
+                /*Functions*/
 
-            lord.disableJoke = function() {
-                var expires = 2 * 1000 * 1000 * 1000;
-                var d = new Date();
-                d.setTime(d.getTime() + expires * 1000);
-                expires = d.toUTCString();
-                var updatedCookie = "no_joke_cg=true; expires=" + expires;
-                document.cookie = updatedCookie;
-                document.getElementById("theImage").className += " hiddenImage";
-                var img = document.getElementById("okayface");
-                img.className = img.className.replace(" hiddenImage", "");
-                setTimeout(function() {
-                    window.location.reload();
-                }, 3000);
-            };
-        </script>
+                lord.disableJoke = function() {
+                    var expires = 2 * 1000 * 1000 * 1000;
+                    var d = new Date();
+                    d.setTime(d.getTime() + expires * 1000);
+                    expires = d.toUTCString();
+                    var updatedCookie = "no_joke_cg=true; expires=" + expires;
+                    document.cookie = updatedCookie;
+                    document.getElementById("theImage").className += " hiddenImage";
+                    document.getElementById("noJokeButton").className += " hiddenButton";
+                    var img = document.getElementById("okayface");
+                    img.className = img.className.replace(" hiddenImage", "");
+                    setTimeout(function() {
+                        window.location.reload();
+                    }, 3000);
+                };
+            </script>
+        <% end %>
     </head>
     <body>
         <div class="theImage">
