--- a/src/lib/template/echo_board.tmpl
+++ b/src/lib/template/echo_board.tmpl
@@ -26,46 +26,48 @@
 
 <% template boardHead() %>
 <%include board::boardHead() %>
-<script type="text/javascript">
-    /*ololord global object*/
+<% if ( content.mode.name != "ascetic" ) %>
+    <script type="text/javascript">
+        /*ololord global object*/
 
-    var lord = lord || {};
+        var lord = lord || {};
 
-    /*Functions*/
+        /*Functions*/
 
-    lord.customEditFormSet = function(form, post) {
-        var a = lord.queryOne(".postSubject > a", post);
-        var link = lord.nameOne("link", form);
-        if (!a) {
-            var tr = link.parentNode.parentNode;
-            tr.parentNode.removeChild(tr);
-            return;
-        }
-        link.value = a.href;
-    };
+        lord.customEditFormSet = function(form, post) {
+            var a = lord.queryOne(".postSubject > a", post);
+            var link = lord.nameOne("link", form);
+            if (!a) {
+                var tr = link.parentNode.parentNode;
+                tr.parentNode.removeChild(tr);
+                return;
+            }
+            link.value = a.href;
+        };
 
-    lord.customEditFormGet = function(form, params) {
-        var link = lord.nameOne("link", form);
-        if (!link)
-            return null;
-        return link.value;
-    };
+        lord.customEditFormGet = function(form, params) {
+            var link = lord.nameOne("link", form);
+            if (!link)
+                return null;
+            return link.value;
+        };
 
-    lord.createPostNodeCustom = function(post, res, permanent, boardName) {
-        if (!res["link"])
-            return;
-        var oldSubject = lord.nameOne("subject", post);
-        var subject = lord.node("span");
-        subject.className = "postSubject";
-        var a = lord.node("a");
-        a.href = res["link"];
-        a.target = "_blank";
-        var text = !!res["subject"] ? res["subject"].replace(/<a.+?>/, "").replace("</a>", "") : res["link"];
-        a.appendChild(lord.node("text", text));
-        subject.appendChild(a);
-        oldSubject.parentNode.replaceChild(subject, oldSubject);
-    };
-</script>
+        lord.createPostNodeCustom = function(post, res, permanent, boardName) {
+            if (!res["link"])
+                return;
+            var oldSubject = lord.nameOne("subject", post);
+            var subject = lord.node("span");
+            subject.className = "postSubject";
+            var a = lord.node("a");
+            a.href = res["link"];
+            a.target = "_blank";
+            var text = !!res["subject"] ? res["subject"].replace(/<a.+?>/, "").replace("</a>", "") : res["link"];
+            a.appendChild(lord.node("text", text));
+            subject.appendChild(a);
+            oldSubject.parentNode.replaceChild(subject, oldSubject);
+        };
+    </script>
+<% end %>
 <% end template %>
 
 <% end view %>
