--- a/src/lib/template/mlp_board.tmpl
+++ b/src/lib/template/mlp_board.tmpl
@@ -7,40 +7,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <% include baseHead(0) %>
-        <script type="text/javascript">
-            /*ololord global object*/
+        <% if ( content.mode.name != "ascetic" ) %>
+            <script type="text/javascript">
+                /*ololord global object*/
 
-            var lord = lord || {};
+                var lord = lord || {};
 
-            /*Functions*/
+                /*Functions*/
 
-            lord.nextStage = function() {
-                document.getElementById("theVideo").pause();
-                document.getElementById("firstStageVideo").className += " hiddenVideo";
-                document.getElementById("nextStageButton").className += " hiddenButton";
-                var nsv = document.getElementById("nextStageVideo");
-                nsv.className = nsv.className.replace(" hiddenVideo", "");
-                document.getElementById("theVideo2").play();
-                var njbtn = document.getElementById("noJokeButton");
-                njbtn.className = njbtn.className.replace(" hiddenButton", "");
-            };
-            
-            lord.disableJoke = function() {
-                var expires = 2 * 1000 * 1000 * 1000;
-                var d = new Date();
-                d.setTime(d.getTime() + expires * 1000);
-                expires = d.toUTCString();
-                var updatedCookie = "no_joke_mlp=true; expires=" + expires;
-                document.cookie = updatedCookie;
-                document.getElementById("nextStageVideo").className += " hiddenVideo";
-                document.getElementById("noJokeButton").className += " hiddenButton";
-                var img = document.getElementById("okayface");
-                img.className = img.className.replace(" hiddenImage", "");
-                setTimeout(function() {
-                    window.location.reload();
-                }, 3000);
-            };
-        </script>
+                lord.nextStage = function() {
+                    document.getElementById("theVideo").pause();
+                    document.getElementById("firstStageVideo").className += " hiddenVideo";
+                    document.getElementById("nextStageButton").className += " hiddenButton";
+                    var nsv = document.getElementById("nextStageVideo");
+                    nsv.className = nsv.className.replace(" hiddenVideo", "");
+                    document.getElementById("theVideo2").play();
+                    var njbtn = document.getElementById("noJokeButton");
+                    njbtn.className = njbtn.className.replace(" hiddenButton", "");
+                };
+
+                lord.disableJoke = function() {
+                    var expires = 2 * 1000 * 1000 * 1000;
+                    var d = new Date();
+                    d.setTime(d.getTime() + expires * 1000);
+                    expires = d.toUTCString();
+                    var updatedCookie = "no_joke_mlp=true; expires=" + expires;
+                    document.cookie = updatedCookie;
+                    document.getElementById("nextStageVideo").className += " hiddenVideo";
+                    document.getElementById("noJokeButton").className += " hiddenButton";
+                    var img = document.getElementById("okayface");
+                    img.className = img.className.replace(" hiddenImage", "");
+                    setTimeout(function() {
+                        window.location.reload();
+                    }, 3000);
+                };
+            </script>
+        <% end %>
     </head>
     <body>
         <div id="firstStageVideo" class="theVideo">
