--- a/src/lib/template/settings.tmpl
+++ b/src/lib/template/settings.tmpl
@@ -19,7 +19,7 @@
         <div class="theTitle">
             <h1><%= pageTitle %></h1>
         </div>        
-        <form id="settings" class="theSettings" method="post" accept-charset="utf-8" enctype="multipart/form-data"
+        <form id="settings" class="centerForm" method="post" accept-charset="utf-8" enctype="multipart/form-data"
               action="/<%= sitePathPrefix %>action/change_settings">
             <table>
                 <tbody>
